test(): :art: WIP - Adiciona testes unitarios